--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -2713,7 +2713,7 @@ ion-infinite-scroll {
     height: 100%;
     -webkit-transform: translate3d(0, 0, 0); }
 
-/* If you change these, change platform.scss as well */
+/* If you change these, change platform.styles as well */
 .has-header {
   top: 44px; }
 
@@ -4107,7 +4107,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
       transition: color 0.2s ease; }
 
 /* Allow parent element to have tabs-top */
-/* If you change this, change platform.scss as well */
+/* If you change this, change platform.styles as well */
 .tabs-top > .tabs, .tabs.tabs-top {
   top: 44px;
   padding-top: 0;
