--- a/www/lib/ionic/scss/_tabs.scss
+++ b/www/lib/ionic/scss/_tabs.scss
@@ -322,7 +322,7 @@ ion-tabs {
 }
 
 /* Allow parent element to have tabs-top */
-/* If you change this, change platform.scss as well */
+/* If you change this, change platform.styles as well */
 .tabs-top > .tabs,
 .tabs.tabs-top {
   top: $bar-height;
