--- a/www/styles/ionic.app.scss
+++ b/www/styles/ionic.app.scss
@@ -19,5 +19,8 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../lib/ionic/scss/ionic";
 
+.item-avatar, .item-avatar .item-content, .item-avatar-left, .item-avatar-left .item-content {
+  min-height: unset;
+}
