--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -7,7 +7,15 @@
         </ion-list>
         <label class="item item-input">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" placeholder="Search" ng-enter="searchUser()" ng-model="userNameToSearch">
+            <input type="search" placeholder="Search" ng-model="userNameToSearch">
         </label>
+        <button class="button button-block button-positive" ng-click="findUser()">
+            Search
+        </button>
+        <ion-list>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users" type="item-text-wrap" ng-click="showConfirm(user)">
+                <h2>{{user.name}}</h2>
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
